--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -9,6 +9,7 @@
   font-size: 1rem;
 
   height: 3.125rem;
+  width: 100%;
 
   .pokestack-logo {
     width: 10rem;
